--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ services:
 before_install:
   - docker build -t dhananjaypuri/docker-react -f Dockerfile.dev .
 
-script:
-  - docker run dhananjaypuri/docker-react npm run test -- --coverage
+#script:
+#  - docker run dhananjaypuri/docker-react npm run test -- --coverage
