--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t dhananjaypuri/docker-react -f Dockerfile.dev .
 
 script:
-  - - docker run -e CI=true dhananjaypuri/docker-react npm run test -- --watchAll=false
+  - docker run -e CI=true dhananjaypuri/docker-react npm run test -- --watchAll=false
