--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ deploy:
   bucket_path: "docker-react"
   on:
     branch: master
-  access_key_id: $AWS_ACCESS_KEYS
+  access_key_id: "$AWS_ACCESS_KEYS"
   secret_access_key:
     secure: "$AWS_SECRET_KEY"
