Added Travis Deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ deploy:
   provider: elasticbeanstalk
   region: "ap-south-1"
   app: "docker-react"
+  env: "DockerReact-env"
   bucket_name: "elasticbeanstalk-ap-south-1-944693917933"
   bucket_path: "docker-react"
   on:
