--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,16 @@ before_install:
 
 script:
   - docker run -e CI=true dhananjaypuri/docker-react npm run test -- --watchAll=false
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-west-1"
+  app: "app"
+  env: "app-env"
+  bucket_name: "elasticbeanstalk-us-west-1-944693917933"
+  bucket_path: "app"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS
+  secret_access_key:
+    secure: "$AWS_KEY"
