--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,13 @@ script:
 
 deploy:
   provider: elasticbeanstalk
-  access_key_id: 
-    secure: $AWS_ACCESS
-  secret_access_key:
-    secure: "$AWS_KEY"
-  region: "us-west-1"  
-  app: "app"
-  env: "App-env"
-  bucket_name: "elasticbeanstalk-us-west-1-944693917933"
+  region: "ap-south-1"
+  app: "newapp"
+  env: "Newapp-env"
+  bucket_name: "elasticbeanstalk-ap-south-1-944693917933"
+  bucket_path: "newapp"
   on:
     branch: master
+  access_key_id: $AWS_ACCESS
+  secret_access_key:
+    secure: "$AWS_KEY"
