--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ script:
 
 deploy:
   provider: elasticbeanstalk
-  region: ap-south-1
-  app: newapp
-  env: Newapp-env
-  bucket_name: elasticbeanstalk-ap-south-1-944693917933
-  bucket_path: newapp
+  region: "ap-south-1"
+  app: "newapp"
+  env: "Newapp-env"
+  bucket_name: "elasticbeanstalk-ap-south-1-944693917933"
+  bucket_path: "newapp"
   on:
     branch: master
   access_key_id: $AWS_ACCESS
